src/objects/Party__c.object
<CustomObject>
    <description>SHAPE - Party is a defined company/account in SSOT</description>
    <fields>
        <fullName>BEGEOID__c</fullName>
        <description>Cisco Commerce Workplace (CCW) Channel Party ID</description>
        <label>BEGEO ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRAddress1__c</fullName>
        <description>CR Branch address 1</description>
        <label>BR Address 1</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRAddress2__c</fullName>
        <description>CR Branch address 2</description>
        <label>BR Address 2</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRCity__c</fullName>
        <description>CR Branch City</description>
        <label>BR City</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRCountry__c</fullName>
        <description>CR Branch Country</description>
        <label>BR Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRDUNS__c</fullName>
        <description>CR Branch DUNS number</description>
        <label>BR DUNS</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRPartyId__c</fullName>
        <description>CR Branch Party Id</description>
        <label>BR Party ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRParty_Name__c</fullName>
        <description>CR Branch Party Name</description>
        <label>BR Party Name</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRState__c</fullName>
        <description>CR Branch State</description>
        <label>BR State</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRZip__c</fullName>
        <description>CR Branch Zip code</description>
        <label>BR Zip</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRPartyIdFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CR Token Party ID flag.  If true it&apos;s a token.  Token ID will hold the token ID.  HQ Party ID will have the token ID</description>
        <label>CR Party ID Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_URL__c</fullName>
        <description>CR HQ Company URL</description>
        <label>Company URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Employees_Total__c</fullName>
        <description>CR HQ Total Employees</description>
        <label>Employees Total</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GUAddress1__c</fullName>
        <description>CR GU Party Address 1</description>
        <label>GU Address 1</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GUAddress2__c</fullName>
        <description>CR GU Address 2</description>
        <label>GU Address 2</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GUCity__c</fullName>
        <description>CR GU City</description>
        <label>GU City</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GUCountry__c</fullName>
        <description>CR GU Country</description>
        <label>GU Country</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GUDUNS__c</fullName>
        <description>CR Global Ultimate DUNS number</description>
        <label>GU DUNS</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GUPartyId__c</fullName>
        <description>CR Global Ultimate Party ID</description>
        <label>GU Party ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GUParty_Name__c</fullName>
        <description>CR GU Party Name</description>
        <label>GU Party Name</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GUState__c</fullName>
        <description>CR GU State</description>
        <label>GU State</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GUZip__c</fullName>
        <description>CR GU Zip code</description>
        <label>GU Zip</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Ultimate_DUNS__c</fullName>
        <description>CR HQ Global Ultimate DUNS number</description>
        <label>Global Ultimate DUNS</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Group parent of Party</description>
        <label>Group Name</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Parties</relationshipLabel>
        <relationshipName>Parties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HQAddress1__c</fullName>
        <description>HQ Party Address 1</description>
        <label>HQ Address_1</label>
        <length>254</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HQAddress2__c</fullName>
        <description>HQ Party Address 2</description>
        <label>HQ Address_2</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HQAnnual_Revenue__c</fullName>
        <description>CR HQ Annual Revenue</description>
        <label>HQ Annual Revenue</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HQCity__c</fullName>
        <description>HQ City</description>
        <label>HQ City</label>
        <length>160</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HQCountry__c</fullName>
        <description>CR HQ Country</description>
        <label>HQ Country</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HQDUNS__c</fullName>
        <description>CR HQ DUNS Number</description>
        <label>HQ DUNS</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HQParty_Id__c</fullName>
        <description>Unique Party ID from Cisco CR</description>
        <externalId>true</externalId>
        <label>HQ Party ID</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HQState__c</fullName>
        <description>CR HQ State</description>
        <label>HQ State</label>
        <length>160</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HQZip__c</fullName>
        <description>CR HQ Zip Codes</description>
        <label>HQ Zip</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Of_Business__c</fullName>
        <description>CR HQ Line of Business</description>
        <label>Line Of Business</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCS_Total__c</fullName>
        <description>CR HQ total number of PCs</description>
        <label>PC Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Phone__c</fullName>
        <description>Cisco Commerce Workplace (CCW) Partner phone</description>
        <label>Partner Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Partner_Status__c</fullName>
        <description>Partner signup status</description>
        <label>Partner Status</label>
        <picklist>
            <picklistValues>
                <fullName>Commission - Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commission - Fully Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commission - Fully Functional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commission - Pending w Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resale - Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resale - Fully Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resale - Fully Functional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resale - Pending w Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resale - Pending w WebEx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <description>Type of Partner</description>
        <label>Partner Type</label>
        <picklist>
            <picklistValues>
                <fullName>Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unified Communications</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Party_Type__c</fullName>
        <label>Party Type</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_SIC__c</fullName>
        <description>CR HQ Primary SIC</description>
        <label>Primary SIC</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TokenId__c</fullName>
        <description>CR Token ID</description>
        <label>Token ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Party</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Group__c</columns>
        <columns>HQParty_Id__c</columns>
        <columns>NAME</columns>
        <columns>HQAddress1__c</columns>
        <columns>HQCity__c</columns>
        <columns>HQState__c</columns>
        <columns>HQCountry__c</columns>
        <columns>HQZip__c</columns>
        <columns>HQDUNS__c</columns>
        <columns>BEGEOID__c</columns>
        <columns>CRPartyIdFlag__c</columns>
        <columns>TokenId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>HQ Party Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>